--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="search-box">    
             <i class="fas fa-bars" id="menu-btn" onclick="openmenu()"></i>
             <i class="fas fa-times" id="close-btn" onclick="closemenu()"></i>
-        <img src="image/amazon_logo.png" class="logo">
+        <img src="amazon_logo.png" class="logo">
         <input type="text" class="form-control">
         <span class="input-group-text"><i class="fa-solid fa-search"></i></span>
 
