--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
     <div id="slider" class="carousel slide carousel-fade" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-          <img src="image/tor.jpg" class="d-block w-100">
+          <img src="tor.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-          <img src="image/box1-1.jpg" class="d-block w-100">
+          <img src="box1-1.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-          <img src="image/box1-3.jpg" class="d-block w-100">
+          <img src="box1-3.jpg" class="d-block w-100">
           </div>
         </div>
         <ol class="carousel-indicators">
@@ -129,13 +129,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-            <img src="image/box1-4.jpg">
+            <img src="box1-4.jpg">
             </div>
             <div class="col-md-4">
-            <img src="image/box1-2.jpg">
+            <img src="box1-2.jpg">
             </div>
             <div class="col-md-4">
-            <img src="image/box1-3.jpg">
+            <img src="box1-3.jpg">
             </div>
 
         
@@ -153,7 +153,7 @@
         <div class="row">
         <div class="col-md-3">
         <div class="product-top">
-        <img src="image/product1-1.jpg">
+        <img src="product1-1.jpg">
             <div class="overlay-right">
             <button type="button" class="btn btn-secondary" title="Quick Shop">
                 <i class="fa-solid fa-eye"></i>   
@@ -179,7 +179,7 @@
         </div>
         <div class="col-md-3">
             <div class="product-top">
-            <img src="image/product1-2.jpg">
+            <img src="product1-2.jpg">
                 <div class="overlay-right">
                 <button type="button" class="btn btn-secondary" title="Quick Shop">
                     <i class="fa-solid fa-eye"></i>   
@@ -205,7 +205,7 @@
             </div>
             <div class="col-md-3">
                 <div class="product-top">
-                <img src="image/product1-3.jpg">
+                <img src="product1-3.jpg">
                     <div class="overlay-right">
                     <button type="button" class="btn btn-secondary" title="Quick Shop">
                         <i class="fa-solid fa-eye"></i>   
@@ -231,7 +231,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="product-top">
-                    <img src="image/product1-4.jpg">
+                    <img src="product1-4.jpg">
                         <div class="overlay-right">
                         <button type="button" class="btn btn-secondary" title="Quick Shop">
                             <i class="fa-solid fa-eye"></i>   
